fix: Fix product category component to scroll horizontally when too long.

--- a/store/src/styles/components/page_banner.scss
+++ b/store/src/styles/components/page_banner.scss
@@ -6,7 +6,7 @@
    flex-direction: column;
    align-items: center;
    justify-content: center;
-   margin-top: 110px;
+   margin-top: 106px;
    z-index: 1;
    &::after {
       content: '';
