--- a/store/src/styles/sections/select-menu.scss
+++ b/store/src/styles/sections/select-menu.scss
@@ -27,7 +27,7 @@
    z-index: 5;
    width: 100%;
    background: #fff;
-   top: 150px;
+   top: 147px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
@@ -135,16 +135,17 @@
 
 /* category */
 .hern-select-menu__category {
-   width: 100%;
    display: flex;
-   justify-content: center;
+   justify-content: flex-start;
    align-items: center;
    width: 100%;
    background-color: #fff;
    position: sticky;
    top: 0;
-   z-index: 999;
+   z-index: 1;
    padding: 16px 12px;
+   overflow-x: auto;
+   white-space: nowrap;
    &__btn {
       font-family: 'Inter';
       font-style: normal;
@@ -173,6 +174,9 @@
          color: #fff;
          opacity: 0.7;
       }
+   }
+   &::-webkit-scrollbar {
+      display: none;
    }
 }
 
